--- a/src/main/webapp/items/list.html
+++ b/src/main/webapp/items/list.html
@@ -2,7 +2,7 @@
     <div data-lift="ItemSnippet.list">
         <h2>Items list</h2>
 
-        <div class="center-block"><input type="submit" value="Add" class="btn-xs btn-success" onclick="document.location.href='/item/edit'"/>
+        <div class="center-block"><input type="submit" value="Add" class="btn-xs btn-success" onclick="document.location.href='/items/edit'"/>
 
             <p data-lift="Msg?id=msg&noticeClass=bg-success&errorClass=bg-danger&warningClass=bg-warning">notice</p>
         </div>
@@ -15,11 +15,11 @@
             </tr>
             </thead>
             <tbody>
-            <tr name="itemList">
-                <th scope="row" name="th">1</th>
-                <td name="nm">Template row 1</td>
-                <td name="br">just now</td>
-                <td class="actions"><a>edit</a> <a>delete</a></td>
+            <tr data-name="itemList">
+                <th scope="row" data-name="th">1</th>
+                <td ><a href="#" data-name="item-link">Template row 1</a></td>
+                <td data-name="br">just now</td>
+                <td data-name="actions" class="actions"><a>edit</a> <a>delete</a></td>
             </tr>
             </tbody>
         </table>
