--- a/src/main/webapp/items2/edit.html
+++ b/src/main/webapp/items2/edit.html
@@ -16,6 +16,6 @@
             <input type="text" id="item.name" class="form-control" placeholder="Enter item name">
         </div>
         <button id="submit" type="submit" class="btn btn-default">Submit</button>
-        <button id="cancel" type="submit" class="btn btn-danger">Cancel</button>
+        <button id="cancel" type="button" class="btn btn-danger">Cancel</button>
     </div>
 </div>
